2010-01-15  Darin Fisher  <darin@chromium.org>

Reviewed by Brady Eidson.

        history.length does not return number of elements in history list
        https://bugs.webkit.org/show_bug.cgi?id=24472

        Test: fast/history/history-length.html

        * page/Page.cpp:
        (WebCore::Page::getHistoryLength):



Canonical link: https://commits.webkit.org/44750@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53346 268f45cc-cd09-0410-ab3c-d52691b4dbfc